# patch-hub

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
client/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/ph/: client.cpp  client.h  message.h  service.cpp  service.h  stream_wrapper.h
service/: CMakeLists.txt  main.cpp  message.h  service.cpp  service.h  stream_wrapper.h
submit_client/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  integration.cpp  message.cpp  test.cpp
